--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>BoostAd</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <h1>Logo</h1>
+            <h1><a href="#"><img src="" alt="Logo" /></a></h1>
             <ul>
                 <li>About</li>
                 <li>Visualise Content</li>
@@ -16,6 +17,7 @@
         </header>
         <main>
             <section id="about">
+                <h2>About</h2>
                 <ul>
                     <li>Bild1</li>
                     <li>Bild2</li>
@@ -23,6 +25,7 @@
                 </ul>
             </section>
             <section id="about-visual">
+                <h2>Visual Explanation</h2>
                 <div>von</div>
                 <div>hier nach</div>
                 <div>da</div>
