--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,35 @@
     <head>
         <meta charset="utf-8">
         <title>BoostAd</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <h1><a href="#"><img src="" alt="Logo" /></a></h1>
-            <ul>
-                <li>About</li>
-                <li>Visualise Content</li>
-                <li>Customers</li>
-                <li>Prototype</li>
-            </ul>
+            <div class="container">
+                <h1><a href="#"><img src="img/logo_boosterad.svg" alt="Logo" /></a></h1>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Profil</a></li>
+                </ul>
+            </div>
         </header>
         <main>
             <section id="about">
-                <h2>About</h2>
-                <ul>
-                    <li>Bild1</li>
-                    <li>Bild2</li>
-                    <li>Bild3</li>
+                <div class="spin">
+                    <img class="icon" src="img/logo_boosterad.svg" alt="" />
+                </div>
+                <ul id="slideAnimation">
+                    <li class="active">
+                        <h2>Booster Ad</h2>
+                    </li>
+                    <li>
+                        <h2>Makes you love Ad's</h2>
+                    </li>
+                    <li>
+                        <h2>Even if you don't like them</h2>
+                    </li>
                 </ul>
             </section>
             <section id="about-visual">
@@ -43,8 +53,30 @@
                 </div>
             </section>
             <section id="app">
-                <h2>Was kann die App kommt hier rein.</h2>
-                <div class="card-preview">Karte1</div>
+                <h2>Prototype</h2>
+                <div class="card-preview">
+                    <div class="card-header">
+                        <form class="choose-profit" action="index.html" method="post">
+                            <!-- Erste Auswahl -->
+                            <input id="percent" type="button" name="percent" value="15%">
+                            <input id="discount" type="button" name="discount" value="345 Coins">
+                            <!-- neue Karte oder weitere Infos -->
+                            <div class="new-card-info">
+                                <input id="percent" type="button" name="percent" value="new Card">
+                                <input id="discount" type="button" name="discount" value="more Infos">
+                            </div>
+
+
+                        </form>
+                    </div>
+                    <div class="card-main">
+                        <p>
+                            Mode
+                        </p>
+                        <img src="" alt="Logo" />
+                    </div>
+
+                </div>
                 <div class="card-preview">Karte2</div>
             </section>
             <section id="powered">
@@ -54,5 +86,7 @@
         <footer>
             FutureatAdHackathon
         </footer>
+        <script type="text/javascript" src="js/jquery-3.0.0.js"></script>
+        <script type="text/javascript" src="js/headerSlide.js"></script>
     </body>
 </html>
