--- a/public/profile.html
+++ b/public/profile.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Profilseite des Nutzers</title>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
+                <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
