--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,10 @@
             </section>
             <section id="app">
                 <h2>Prototype</h2>
+                <div  class="double-bounce">
+                    <div class="child double-bounce1"></div>
+                    <div class="child double-bounce2"></div>
+                </div>
                 <div class="card-preview">
                     <div class="card-header">
                         <form class="choose-profit" action="index.html" method="post">
@@ -62,8 +66,14 @@
                             <input id="discount" type="button" name="discount" value="345 Coins">
                             <!-- neue Karte oder weitere Infos -->
                             <div class="new-card-info">
-                                <input id="percent" type="button" name="percent" value="new Card">
-                                <input id="discount" type="button" name="discount" value="more Infos">
+                                <input id="new-card" type="button" name="newCard" value="New Card">
+                                <input id="more-infos" type="button" name="moreInfos" value="More Information">
+                            </div>
+                            <!-- mehr information oder in der schleife eine neue karten -->
+                            <div class="moreInfos">
+                                <a href="coinShop.html">Coinshop</a>
+                                <a href="rabattseite.html">Your Discounts</a>
+                                <input id="return" type="button" name="returntoside" value="Return to page">
                             </div>
 
 
