--- a/public/index.html
+++ b/public/index.html
@@ -56,38 +56,41 @@
                 <h2>Prototype</h2>
                 <div  class="double-bounce">
                     <div class="child double-bounce1"></div>
+                    <div id="eventTicker">eventticker</div>
                     <div class="child double-bounce2"></div>
                 </div>
                 <div class="card-preview">
-                    <div class="card-header">
-                        <form class="choose-profit" action="index.html" method="post">
-                            <!-- Erste Auswahl -->
-                            <input id="percent" type="button" name="percent" value="15%">
-                            <input id="discount" type="button" name="discount" value="345 Coins">
-                            <!-- neue Karte oder weitere Infos -->
-                            <div class="new-card-info">
-                                <input id="new-card" type="button" name="newCard" value="New Card">
-                                <input id="more-infos" type="button" name="moreInfos" value="More Information">
-                            </div>
-                            <!-- mehr information oder in der schleife eine neue karten -->
-                            <div class="moreInfos">
-                                <a href="coinShop.html">Coinshop</a>
-                                <a href="rabattseite.html">Your Discounts</a>
-                                <input id="return" type="button" name="returntoside" value="Return to page">
-                            </div>
+                    <div class="container">
+                        <div class="card-header">
+                            <form class="choose-profit" action="index.html" method="post">
+                                <!-- Erste Auswahl -->
+                                <input id="percent" type="button" name="percent" value="15%">
+                                <input id="discount" type="button" name="discount" value="345 Coins">
+                                <!-- neue Karte oder weitere Infos -->
+                                <div class="new-card-info">
+                                    <input id="new-card" type="button" name="newCard" value="New Card">
+                                    <input id="more-infos" type="button" name="moreInfos" value="More Information">
+                                </div>
+                                <!-- mehr information oder in der schleife eine neue karten -->
+                                <div class="moreInfos">
+                                    <a href="coinShop.html">Coinshop</a>
+                                    <a href="rabattseite.html">Your Discounts</a>
+                                    <input id="return" type="button" name="returntoside" value="Return to page">
+                                </div>
 
 
-                        </form>
-                    </div>
-                    <div class="card-main">
-                        <p>
-                            Mode
-                        </p>
-                        <img src="" alt="Logo" />
+                            </form>
+                        </div>
+                        <div class="card-main">
+                            <p>
+                                Mode
+                            </p>
+                            <img src="" alt="Logo" />
+                        </div>
+
                     </div>
 
                 </div>
-                <div class="card-preview">Karte2</div>
             </section>
             <section id="powered">
                 wir halt
